# shuttle

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish-to-pypi.yml  release.yml  test.yml
FASTMCP_BEST_PRACTICES/: index.html
MCP_TRANSPORT_COMPARISON/: index.html
MIGRATION_TO_V2/: index.html
PROJECT_SUMMARY/: index.html
PYPI_PUBLISHING_GUIDE/: index.html
RELEASE_PROCESS/: index.html
TOOLS_V2_FEATURES/: index.html
TOOL_OUTPUT_FORMAT/: index.html
api/: index.html
configuration/: index.html
docs/: FASTMCP_BEST_PRACTICES.md  MCP_TRANSPORT_COMPARISON.md  MIGRATION_TO_V2.md  PROJECT_SUMMARY.md  PYPI_PUBLISHING_GUIDE.md  RELEASE_PROCESS.md  TOOLS_V2_FEATURES.md  TOOL_OUTPUT_FORMAT.md  api.md  configuration.md  index.md  mcp-setup.md  security-rules.md  troubleshooting.md  web-panel.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-03-20-shuttle-backend-core.md  2026-03-20-shuttle-web-panel.md  2026-03-21-shuttle-v2-upgrade.md
docs/superpowers/specs/: 2026-03-20-shuttle-design.md  2026-03-20-shuttle-v2-design.md
examples/: README.md
examples/cursor/: README.md  WORKING_CONFIG.md  basic-config.json  serve-config.json  setup-cursor-mcp.sh
examples/optimized_tools/: README.md  ssh_tools_optimized.py
mcp-setup/: index.html
security-rules/: index.html
skills/: shuttle.md
src/shuttle/: __init__.py  __main__.py  cli.py
src/shuttle/core/: __init__.py  config.py  connection_pool.py  credentials.py  proxy.py  security.py  session.py  ssh_config.py
src/shuttle/db/: __init__.py  engine.py  models.py  repository.py  seeds.py
src/shuttle/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/shuttle/web/: app.py  deps.py  schemas.py
src/shuttle/web/routes/: data.py  logs.py  nodes.py  rules.py  sessions.py  settings.py  stats.py
superpowers/plans/2026-03-20-shuttle-backend-core/: index.html
superpowers/plans/2026-03-20-shuttle-web-panel/: index.html
superpowers/plans/2026-03-21-shuttle-v2-upgrade/: index.html
superpowers/specs/2026-03-20-shuttle-design/: index.html
superpowers/specs/2026-03-20-shuttle-v2-design/: index.html
tests/: README.md  conftest.py  test_cli.py  test_package_main.py
tests/test_core/: test_config.py  test_connection_pool.py  test_credentials.py  test_proxy.py  test_security.py  test_session.py  test_ssh_config.py
tests/test_db/: test_engine.py  test_models.py  test_repository.py  test_repository_session_log.py  test_seeds_extra.py
tests/test_mcp/: test_execute_logic_more.py  test_fastmcp_client.py  test_integration.py  test_server.py  test_service_app.py  test_tools.py
tests/test_web/: conftest.py  test_data_api.py  test_logs_api.py  test_nodes_api.py  test_rules_api.py  test_rules_effective.py  test_sessions_api.py  test_settings_api.py
troubleshooting/: index.html
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web-panel/: index.html
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: Badge.tsx  ConfirmDialog.tsx  DataTable.tsx  EmptyState.tsx  Layout.tsx  Sidebar.tsx  Skeleton.tsx
web/src/hooks/: AppContext.tsx  useRecentNodes.ts  useTheme.ts
web/src/pages/: Activity.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  NodeForm.tsx  Nodes.tsx  Overview.tsx  RuleForm.tsx  Rules.tsx  SessionDetail.tsx  Sessions.tsx  Settings.tsx
web/src/types/: index.ts
