[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shuttle-mcp"
version = "0.1.0"
description = "Secure SSH gateway for AI assistants — MCP server with connection pooling, session isolation, and command safety"
authors = [{ name = "enwaiax", email = "enwaiax@users.noreply.github.com" }]
readme = "README.md"
license = { text = "ISC" }
requires-python = ">=3.12"
keywords = ["ssh", "mcp", "ai", "llm", "remote", "shuttle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

dependencies = [
    "fastmcp>=2.0.0",
    "asyncssh>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "cryptography>=41.0.0",
    "loguru>=0.7.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.110.0",
]

[project.scripts]
shuttle = "shuttle.cli:app"

[project.urls]
homepage = "https://github.com/enwaiax/shuttle"
repository = "https://github.com/enwaiax/shuttle"

[tool.hatch.build]
artifacts = ["src/shuttle/web/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/shuttle"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]
