[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shuttle-mcp"
version = "0.2.0"
description = "Secure SSH gateway for AI assistants — MCP server with connection pooling, session isolation, and command safety"
authors = [{ name = "enwaiax", email = "enwaiax@users.noreply.github.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ssh", "mcp", "ai", "llm", "remote", "shuttle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

dependencies = [
    "fastmcp>=2.0.0",
    "asyncssh>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "cryptography>=41.0.0",
    "loguru>=0.7.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.110.0",
]

[project.scripts]
shuttle = "shuttle.cli:app"

[project.urls]
Homepage = "https://github.com/enwaiax/shuttle"
Repository = "https://github.com/enwaiax/shuttle"
Documentation = "https://enwaiax.github.io/shuttle/"
Issues = "https://github.com/enwaiax/shuttle/issues"
Changelog = "https://github.com/enwaiax/shuttle/blob/main/CHANGELOG.md"

[tool.hatch.build]
artifacts = ["src/shuttle/web/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/shuttle"]

# ── Ruff ─────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "B008",   # function calls in defaults (FastAPI Depends pattern)
    "RUF012", # mutable class default (SQLAlchemy pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

# ── Pytest ───────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring real SSH connections",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ── Coverage ─────────────────────────────────────────

[tool.coverage.run]
source = ["src/shuttle"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# ── Dev Dependencies ─────────────────────────────────

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
]
